<resources>
    <string name="app_name">WTWT Viewer 2.0</string>
    <string name="nav_option_all">All</string>
    <string name="nav_option_day">By Day</string>
    <string name="nav_option_complete">Completed</string>
    <string name="nav_option_settings">Settings</string>
    <string name="hint_title">Title</string>
    <string name="list_option_show_hidden">show hidden</string>
    <string name="list_option_show_completed">show completed</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="frag_title_all_list">All Toons</string>
    <string name="frag_title_by_day">Classify By Release Day</string>
    <string name="frag_title_completed">Completeds</string>
    <string name="frag_title_settings">Settings</string>
    <string name="frag_title_add_by_web">Load from Web</string>
    <string name="frag_title_edit_entry">Edit Entry</string>
    <string name="frag_title_review_entry">Review New Entry</string>
    <string name="frag_title_episode_list">Episodes List</string>
    <string name="frag_title_viewer">Viewer</string>
    <string name="frag_title_wait">Loading</string>

    <string name="day_sun_short">SUN</string>
    <string name="day_mon_short">MON</string>
    <string name="day_tue_short">TUE</string>
    <string name="day_wed_short">WED</string>
    <string name="day_thu_short">THU</string>
    <string name="day_fri_short">FRI</string>
    <string name="day_sat_short">SAT</string>
    <string name="day_unspecified">NON</string>

    <string name="pref_btn_key_restore_old" translatable="false">btn_restore_old</string>
    <string name="pref_btn_key_rebuild_thumbnail" translatable="false">btn_rebuild_thumbnail</string>

    <string name="pref_key_root" translatable="false">prefwtwt</string>
    <string name="pref_key_entrypoint" translatable="false">entrypoint</string>
    <string name="pref_cat_entrypoints">entry point</string>
    <string name="pref_desc_entrypoints">Please select an entrypoint to load toons.</string>
    <string name="pref_key_default_sorting_cat" translatable="false">defaultSortingCat</string>
    <string name="pref_key_default_sorting_dir" translatable="false">defaultSortingDir</string>

    <string name="pref_cat_backup_restore">Backup and Restore</string>
    <string name="pref_key_btn_backup" translatable="false">btn_backup</string>
    <string name="pref_key_btn_restore" translatable="false">btn_restore</string>
    <string name="pref_key_btn_clear_all" translatable="false">btn_clear_all</string>
    <string name="pref_btn_backup">Backup</string>
    <string name="pref_btn_restore">Restore</string>
    <string name="pref_btn_clear">Clear All</string>

    <string name="pref_cat_restore_old">Old version restore</string>
    <string name="btn_restore_old">Restore Old DB</string>
    <string name="pref_cat_rebuild_thumbnail">Rebuild Thumnail</string>
    <string name="btn_rebuild_thumbnail">Reload all thumnail again</string>

    <string name="shared_pref_key" translatable="false">sharedprefwtwt</string>
    <string name="shared_pref_showhidden_key" translatable="false">showhidden</string>
    <string name="shared_pref_showcompleted_key" translatable="false">showcompleted</string>

    <string name="bundle_from" translatable="false">from</string>
    <string name="bundle_junk" translatable="false">junkargumentforupdate</string>
    <string name="bundle_link" translatable="false">validatedLink</string>
    <string name="bundle_toons" translatable="false">toonsparcelable</string>
    <string name="bundle_toons_old" translatable="false">toonsparcelableold</string>

    <string name="date_format" translatable="false">yyyy-MM-dd</string>

    <string name="dialog_from_web">From Web?</string>
    <string name="dialog_txt_url">url</string>
    <string name="dialog_desc_addnew">Create New Item</string>

    <string name="btn_web_addthispage">Add This Page</string>

    <string name="hint_toonid">Toon ID</string>
    <string name="hint_epiid">Episode ID</string>
    <string name="hint_toontype">Toon Type</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_by_day">By Release</string>
    <string name="menu_by_id">By Enlistment ID</string>
    <string name="menu_by_name">By Title</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_view_on_web">View on Web</string>

    <string name="action_set_hide">Set Hidden</string>
    <string name="action_set_show">Set Visible</string>
    <string name="action_set_complete">Set as Complete</string>
    <string name="action_set_incomplete">Set as Incomplete</string>

    <string name="txt_plswait">Please wait for a moment while app is getting a valid link of entrypoint.</string>
    <string name="txt_invalid_title">Title shouldn\'t be empty!</string>
    <string name="txt_something_went_wrong">Something went wrong</string>
    <string name="txt_invalid_episode_id">There is no such episode</string>
    <string name="txt_unsupported_toon">Manga unsupported</string>
    <string name="txt_backup_in_progress">Backing up in background</string>
    <string name="txt_restore_in_progress">Restoring in background</string>
    <string name="txt_backup_successful">Backed up successfully</string>
    <string name="txt_restore_successfully">Restored successfully</string>
    <string name="txt_restore_failed">Restore failed</string>
    <string name="txt_backup_failed">Back up failed</string>
    <string name="txt_desc_restore_old">This is for db compatibility from my old version. If you don\'t know what this is, its OK to move on.</string>
    <string name="txt_invalid_file_type">Given file doesn\'t seem like db backup</string>
    <string name="txt_rebuild_thumnail_complete">Thumnails are reloaded</string>
    <string name="txt_rebuild_thumnail_started">Thumnail reload has started in bacground</string>

    <string name="txt_new_entry" translatable="false">new</string>

    <string name="dialog_body_warning">Do you really wish to clear all db entry?</string>
    <string name="dialog_title_warning">Warning!</string>
    <string name="dialog_btn_clear_negative">Clear All</string>
    <string name="dialog_btn_cancel_positive">Back</string>

    <string name="txt_pls_wait_episodes">Please wait shortly while app is getting a list of episodes from web</string>
    <string name="txt_pirate">Pirate of a pirate</string>
    <string name="pref_desc_default_sorting_cat">Please select a default sorting method</string>
    <string name="pref_cat_default_sorting">Default Sorting Method</string>
    <string name="pref_desc_default_sorting_dir">Please select a default sorting direction</string>
    <string name="pref_array_default_sorting_dir_default_value">Ascending</string>
    <string name="pref_array_default_sorting_cat_default_value">By Name</string>
    <string name="txt_search">Search</string>
    <string name="txt_search_empty">No such result</string>
</resources>