<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/pref_key_root">
    <PreferenceCategory
        android:title="@string/pref_cat_entrypoints">
        <ListPreference
            android:key="@string/pref_key_entrypoint"
            android:title="@string/pref_desc_entrypoints"
            android:entries="@array/entry_points"
            android:entryValues="@array/entry_points"
            app:defaultValue="https://nicelink6.com/"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_backup_restore">
        <Preference
            android:key="@string/pref_key_btn_backup"
            android:title="@string/pref_btn_backup" />
        <Preference
            android:key="@string/pref_key_btn_restore"
            android:title="@string/pref_btn_restore" />
        <Preference
            android:key="@string/pref_key_btn_clear_all"
            android:title="@string/pref_btn_clear" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_restore_old">
        <Preference
            android:title="@string/txt_desc_restore_old" />
        <Preference
            android:key="@string/pref_btn_key_restore_old"
            android:title="@string/btn_restore_old" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_rebuild_thumbnail">
        <Preference
            android:key="@string/pref_btn_key_rebuild_thumbnail"
            android:title="@string/btn_rebuild_thumbnail" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_default_sorting" >

        <ListPreference
            android:key="@string/pref_key_default_sorting_cat"
            android:title="@string/pref_desc_default_sorting_cat"
            android:entries="@array/default_sorting_cat"
            android:entryValues="@array/default_sorting_cat"
            app:defaultValue="@string/pref_array_default_sorting_cat_default_value"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/pref_key_default_sorting_dir"
            android:title="@string/pref_desc_default_sorting_dir"
            android:entries="@array/default_sorting_dir"
            android:entryValues="@array/default_sorting_dir"
            app:defaultValue="@string/pref_array_default_sorting_dir_default_value"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>