<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_by_name"
        android:icon="@drawable/ic_baseline_arrow_drop_up_24"
        android:iconTint="?attr/TextColorPrimaryInverseThemed"
        android:orderInCategory="0"
        android:title="@string/menu_by_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_by_day"
        android:icon="@drawable/ic_baseline_arrow_drop_up_24"
        android:iconTint="?attr/TextColorPrimaryInverseThemed"
        android:orderInCategory="1"
        android:title="@string/menu_by_day"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_by_id"
        android:icon="@drawable/ic_baseline_arrow_drop_up_24"
        android:iconTint="?attr/TextColorPrimaryInverseThemed"
        android:orderInCategory="2"
        android:title="@string/menu_by_id"
        app:showAsAction="never" />
</menu>