<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/tool_bar_height"
        tools:context=".ByDayListFragment">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sun"
                    style="?attr/tabStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_sun_short"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_mon"
                    style="?attr/tabStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_mon_short"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_tue"
                    style="?attr/tabStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_tue_short"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_wed"
                    style="?attr/tabStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_wed_short"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_thu"
                    style="?attr/tabStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_thu_short"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_fri"
                    style="?attr/tabStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_fri_short"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sat"
                    style="?attr/tabStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_sat_short"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_unspecified"
                    style="?attr/tabStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_unspecified"
                    android:textColor="?android:attr/textColorPrimaryInverse" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/ll_byday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/BackgroundDimmed"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/s_byday_showhidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_option_show_hidden" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/s_byday_showcompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_option_show_completed" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/byday_rec"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_byday"
            tools:listitem="@layout/recycler_item_toons" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_byday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>