<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/waitFragment">

    <fragment
        android:id="@+id/allListFragment"
        android:name="ark.noah.wtwtviewer20.AllListFragment"
        android:label="@string/frag_title_all_list"
        tools:layout="@layout/fragment_all_list" >
        <action
            android:id="@+id/action_allListFragment_to_addByWebFragment"
            app:destination="@id/addByWebFragment"
            app:popUpTo="@id/allListFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_allListFragment_to_reviewEntryFragment"
            app:destination="@id/reviewEntryFragment"
            app:popUpTo="@id/allListFragment" />
        <action
            android:id="@+id/action_allListFragment_to_episodesListFragment"
            app:destination="@id/episodesListFragment" />
        <action
            android:id="@+id/action_allListFragment_to_editEntryFragment"
            app:destination="@id/editEntryFragment" />
    </fragment>
    <fragment
        android:id="@+id/byDayListFragment"
        android:name="ark.noah.wtwtviewer20.ByDayListFragment"
        android:label="@string/frag_title_by_day"
        tools:layout="@layout/fragment_by_day_list" >
        <action
            android:id="@+id/action_byDayListFragment_to_addByWebFragment"
            app:destination="@id/addByWebFragment"
            app:popUpTo="@id/byDayListFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_byDayListFragment_to_reviewEntryFragment"
            app:destination="@id/reviewEntryFragment"
            app:popUpTo="@id/reviewEntryFragment" />
        <action
            android:id="@+id/action_byDayListFragment_to_episodesListFragment"
            app:destination="@id/episodesListFragment" />
        <action
            android:id="@+id/action_byDayListFragment_to_editEntryFragment"
            app:destination="@id/editEntryFragment" />
    </fragment>
    <fragment
        android:id="@+id/completedListFragment"
        android:name="ark.noah.wtwtviewer20.CompletedListFragment"
        android:label="@string/frag_title_completed"
        tools:layout="@layout/fragment_completed_list" >
        <action
            android:id="@+id/action_completedListFragment_to_addByWebFragment"
            app:destination="@id/addByWebFragment"
            app:popUpTo="@id/completedListFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_completedListFragment_to_reviewEntryFragment"
            app:destination="@id/reviewEntryFragment"
            app:popUpTo="@id/completedListFragment" />
        <action
            android:id="@+id/action_completedListFragment_to_episodesListFragment"
            app:destination="@id/episodesListFragment" />
        <action
            android:id="@+id/action_completedListFragment_to_editEntryFragment"
            app:destination="@id/editEntryFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ark.noah.wtwtviewer20.SettingsFragment"
        android:label="@string/frag_title_settings" />
    <fragment
        android:id="@+id/waitFragment"
        android:name="ark.noah.wtwtviewer20.WaitFragment"
        android:label="@string/txt_plswait"
        tools:layout="@layout/fragment_wait" >
        <action
            android:id="@+id/action_waitFragment_to_allListFragment3"
            app:destination="@id/allListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addByWebFragment"
        android:name="ark.noah.wtwtviewer20.AddByWebFragment"
        android:label="fragment_add_by_web"
        tools:layout="@layout/fragment_add_by_web" >
        <argument
            android:name="from"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/action_addByWebFragment_to_reviewEntryFragment4"
            app:destination="@id/reviewEntryFragment"
            app:popUpTo="@id/addByWebFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/reviewEntryFragment"
        android:name="ark.noah.wtwtviewer20.ReviewEntryFragment"
        android:label="@string/frag_title_review_entry"
        tools:layout="@layout/fragment_review_entry">
        <action
            android:id="@+id/action_reviewEntryFragment_to_allListFragment"
            app:destination="@id/allListFragment"
            app:popUpTo="@id/allListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_reviewEntryFragment_to_completedListFragment2"
            app:destination="@id/completedListFragment"
            app:popUpTo="@id/completedListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_reviewEntryFragment_to_byDayListFragment"
            app:destination="@id/byDayListFragment"
            app:popUpTo="@id/byDayListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="from"
            app:argType="integer" />
        <argument
            android:name="link"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/episodesListFragment"
        android:name="ark.noah.wtwtviewer20.EpisodesListFragment"
        android:label="@string/frag_title_episode_list"
        tools:layout="@layout/fragment_episodes_list">
        <action
            android:id="@+id/action_episodesListFragment_to_toonViewerFragment"
            app:destination="@id/toonViewerFragment" />
        <argument
            android:name="Toon"
            app:argType="ark.noah.wtwtviewer20.ToonsContainer" />
    </fragment>
    <fragment
        android:id="@+id/toonViewerFragment"
        android:name="ark.noah.wtwtviewer20.ToonViewerFragment"
        android:label="@string/frag_title_viewer"
        tools:layout="@layout/fragment_toon_viewer" >
        <argument
            android:name="Toon"
            app:argType="ark.noah.wtwtviewer20.ToonsContainer" />
        <action
            android:id="@+id/action_toonViewerFragment_self"
            app:destination="@id/toonViewerFragment"
            app:popUpTo="@id/toonViewerFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_toonViewerFragment_to_episodesListFragment"
            app:destination="@id/episodesListFragment"
            app:popUpTo="@id/episodesListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editEntryFragment"
        android:name="ark.noah.wtwtviewer20.EditEntryFragment"
        android:label="@string/frag_title_edit_entry"
        tools:layout="@layout/fragment_edit_entry">
        <argument
            android:name="Toon"
            app:argType="ark.noah.wtwtviewer20.ToonsContainer" />
        <action
            android:id="@+id/action_editEntryFragment_to_completedListFragment"
            app:destination="@id/completedListFragment"
            app:popUpTo="@id/completedListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_editEntryFragment_to_byDayListFragment"
            app:destination="@id/byDayListFragment"
            app:popUpTo="@id/byDayListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_editEntryFragment_to_allListFragment"
            app:destination="@id/allListFragment"
            app:popUpTo="@id/allListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>